# Majus

./: CMakeLists.txt  build.gradle.kts  codegen.c  codegen.h  errors.c  errors.h  lexer.c  lexer.h  main.c  main.maj  parser.c  parser.h  printInt.c  settings.gradle.kts  syntax.majus
gradle/wrapper/: gradle-wrapper.properties
src/main/antlr/: Majus.g4
src/main/java/org/kokolor/: Main.java  MajusCompiler.java  MajusErrorHandler.java  MajusLlvmCodeGenerator.java  SemanticAnalyzer.java  SymbolTable.java
